dark mode changes to rooms and forms. margin problem for summary form on form_data.html should also be fixed now

--- a/app/static/css/create_class.css
+++ b/app/static/css/create_class.css
@@ -135,6 +135,9 @@
 }
 
 @media (prefers-color-scheme: dark) {
+    .classTitle h1 {
+        color: #e6e6e6;
+    }
     .newCourseButton {
         background-color: #c75858;
     }
